<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/nazivET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Naziv biljke"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/slikaIV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/porodicaET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Porodica"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/nazivET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazivET" />

    <EditText
        android:id="@+id/medicinskoUpozorenjeET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Medicinsko upozorenje"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/porodicaET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/porodicaET" />

    <EditText
        android:id="@+id/jeloET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Jelo"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/medicinskoUpozorenjeET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicinskoUpozorenjeET" />

    <ListView
        android:id="@+id/medicinskaKoristLV"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dodajJeloBtn"
        app:layout_constraintEnd_toStartOf="@id/klimatskiTipLV"
        app:layout_constraintBottom_toTopOf="@id/zemljisniTipLV"
        android:choiceMode="multipleChoice"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="264dp" />

    <ListView
        android:id="@+id/klimatskiTipLV"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/uslikajBiljkuBtn"
        app:layout_constraintStart_toEndOf="@id/medicinskaKoristLV"
        app:layout_constraintBottom_toTopOf="@id/zemljisniTipLV"
        app:layout_constraintEnd_toEndOf="parent"
        android:choiceMode="multipleChoice"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="261dp" />

    <ListView
        android:id="@+id/zemljisniTipLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medicinskaKoristLV"
        app:layout_constraintBottom_toTopOf="@id/profilOkusaLV"
        android:choiceMode="multipleChoice"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="419dp" />

    <ListView
        android:id="@+id/profilOkusaLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zemljisniTipLV"
        app:layout_constraintBottom_toTopOf="@id/jelaLV"
        android:choiceMode="singleChoice"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="526dp" />

    <ListView
        android:id="@+id/jelaLV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilOkusaLV"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/dodajJeloBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/jeloET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/medicinskaKoristLV"
        android:text="Dodaj jelo"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="213dp" />

    <Button
        android:id="@+id/dodajBiljkuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Dodaj biljku"
        app:layout_constraintBottom_toBottomOf="@id/dodajJeloBtn"
        app:layout_constraintStart_toEndOf="@id/dodajJeloBtn"
        app:layout_constraintTop_toTopOf="@+id/dodajJeloBtn" />

    <Button
        android:id="@+id/uslikajBiljkuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@+id/dodajBiljkuBtn"
        app:layout_constraintStart_toEndOf="@+id/dodajBiljkuBtn"
        app:layout_constraintBottom_toBottomOf="@id/dodajBiljkuBtn"
        android:text="Uslikaj biljku"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="213dp" />

    <ImageView
        android:id="@+id/slikaIV"
        android:layout_width="180dp"
        android:layout_height="170dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/uslikajBiljkuBtn"
        app:layout_constraintStart_toEndOf="@id/nazivET"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="5dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="21dp" />
</androidx.constraintlayout.widget.ConstraintLayout>