...
        app:layout_constraintBaseline_toBaselineOf="@id/resetBtn"
        android:layout_margin="15dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="42dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/biljkeRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pretragaET"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="323dp"
        tools:layout_editor_absoluteY="34dp" />

    <Button
        android:id="@+id/novaBiljkaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dodaj novu biljku"
        app:layout_constraintTop_toBottomOf="@id/modSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/brzaPretraga"
...
